--- a/templates/guacamole_exporter.env.j2
+++ b/templates/guacamole_exporter.env.j2
@@ -1,4 +1,4 @@
-GUACAMOLE_ENDPOINT={{ guacamole_endpoint }}
-GUACAMOLE_USERNAME={{ guacamole_username }}
-GUACAMOLE_PASSWORD={{ guacamole_password }}
-GUACAMOLE_DATASOURCE={{ guacamole_datasource }}
+GUACAMOLE_ENDPOINT={{ guacamole_exporter_endpoint }}
+GUACAMOLE_USERNAME={{ guacamole_exporter_username }}
+GUACAMOLE_PASSWORD={{ guacamole_exporter_password }}
+GUACAMOLE_DATASOURCE={{ guacamole_exporter_datasource }}
